<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:id="@+id/dialog_password_code_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/dialog_password_guideline"
        app:layout_constraintEnd_toEndOf="@+id/dialog_password_tv_title"
        app:layout_constraintStart_toStartOf="@+id/dialog_password_tv_title"
        app:layout_constraintTop_toBottomOf="@+id/dialog_password_tv_title">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dialog_password_first_code"
            android:layout_width="@dimen/passcodeIconSize"
            android:layout_height="@dimen/passcodeIconSize"
            android:layout_marginEnd="@dimen/margin_large"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:strokeColor="@color/secondaryColor"
            app:strokeWidth="2dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dialog_password_second_code"
            android:layout_width="@dimen/passcodeIconSize"
            android:layout_height="@dimen/passcodeIconSize"
            android:layout_marginEnd="@dimen/margin_large"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:strokeColor="@color/secondaryColor"
            app:strokeWidth="2dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dialog_password_third_code"
            android:layout_width="@dimen/passcodeIconSize"
            android:layout_height="@dimen/passcodeIconSize"
            android:layout_marginEnd="@dimen/margin_large"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:strokeColor="@color/secondaryColor"
            app:strokeWidth="2dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dialog_password_fourth_code"
            android:layout_width="@dimen/passcodeIconSize"
            android:layout_height="@dimen/passcodeIconSize"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:strokeColor="@color/secondaryColor"
            app:strokeWidth="2dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dialog_password_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/dialog_password_btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialog_password_guideline">

        <LinearLayout
            android:id="@+id/firstNumbersLayout"
            style="@style/PasswordButtonsLayout"
            android:layout_marginBottom="@dimen/margin_large">

            <com.suzei.minote.utils.widgets.CircleView
                android:id="@+id/buttonOne"
                style="@style/PasswordButton"
                android:layout_marginEnd="@dimen/margin_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/_1"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/passcodeButtonTextSize" />

            </com.suzei.minote.utils.widgets.CircleView>

            <com.suzei.minote.utils.widgets.CircleView
                android:id="@+id/buttonTwo"
                style="@style/PasswordButton"
                android:layout_marginEnd="@dimen/margin_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/_2"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/passcodeButtonTextSize" />

            </com.suzei.minote.utils.widgets.CircleView>

            <com.suzei.minote.utils.widgets.CircleView
                android:id="@+id/buttonThree"
                style="@style/PasswordButton">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/_3"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/passcodeButtonTextSize" />

            </com.suzei.minote.utils.widgets.CircleView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/first_layout"
            style="@style/PasswordButtonsLayout"
            android:layout_marginBottom="@dimen/margin_large">

            <com.suzei.minote.utils.widgets.CircleView
                android:id="@+id/buttonFour"
                style="@style/PasswordButton"
                android:layout_marginEnd="@dimen/margin_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/_4"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/passcodeButtonTextSize" />

            </com.suzei.minote.utils.widgets.CircleView>

            <com.suzei.minote.utils.widgets.CircleView
                android:id="@+id/buttonFive"
                style="@style/PasswordButton"
                android:layout_marginEnd="@dimen/margin_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/_5"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/passcodeButtonTextSize" />

            </com.suzei.minote.utils.widgets.CircleView>

            <com.suzei.minote.utils.widgets.CircleView
                android:id="@+id/buttonSix"
                style="@style/PasswordButton">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/_6"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/passcodeButtonTextSize" />

            </com.suzei.minote.utils.widgets.CircleView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_layout"
            style="@style/PasswordButtonsLayout"
            android:layout_marginBottom="@dimen/margin_large">

            <com.suzei.minote.utils.widgets.CircleView
                android:id="@+id/buttonSeven"
                style="@style/PasswordButton"
                android:layout_marginEnd="@dimen/margin_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/_7"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/passcodeButtonTextSize" />

            </com.suzei.minote.utils.widgets.CircleView>

            <com.suzei.minote.utils.widgets.CircleView
                android:id="@+id/buttonEight"
                style="@style/PasswordButton"
                android:layout_marginEnd="@dimen/margin_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/_8"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/passcodeButtonTextSize" />

            </com.suzei.minote.utils.widgets.CircleView>

            <com.suzei.minote.utils.widgets.CircleView
                android:id="@+id/buttonNine"
                style="@style/PasswordButton">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/_9"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/passcodeButtonTextSize" />

            </com.suzei.minote.utils.widgets.CircleView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/last_layout"
            style="@style/PasswordButtonsLayout">

            <com.suzei.minote.utils.widgets.CircleView
                android:id="@+id/buttonZero"
                style="@style/PasswordButton">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/passcodeButtonTextSize" />

            </com.suzei.minote.utils.widgets.CircleView>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/dialog_password_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_light"
        android:text="@string/enter_passcode"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_extra_large"
        app:layout_constraintBottom_toTopOf="@+id/dialog_password_code_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_password_btn_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/cancel"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_password_btn_clear"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/clear"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>