<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editor_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/editor_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="noScroll">

            <ImageButton
                android:id="@+id/editor_back_arrow"
                style="@style/ImageButton.Selectable"
                android:layout_marginStart="@dimen/margin_small"
                android:contentDescription="@string/back"
                app:srcCompat="@drawable/ic_back_black" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/editor_edittext_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/editor_text_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editor_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:gravity="top|start"
                    android:hint="@string/title"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textMultiLine"
                    android:textCursorDrawable="@null"
                    android:textSize="32sp" />

                <EditText
                    android:id="@+id/editor_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:gravity="top|start"
                    android:hint="@string/write_something"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textMultiLine"
                    android:textCursorDrawable="@null" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="52dp"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>

    <include
        android:id="@+id/bottomsheet_edit_note"
        layout="@layout/bottomsheet_edit_note" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editor_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save_note_button"
        app:backgroundTint="@color/secondaryColor"
        app:layout_anchor="@+id/bottomsheet_edit_note"
        app:layout_anchorGravity="center_horizontal"
        app:srcCompat="@drawable/ic_done" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>